# design-patten

./: Cargo.toml
behavioral/chain-of-responsibility/: Cargo.toml
behavioral/chain-of-responsibility/src/: department.rs  main.rs  patient.rs
behavioral/command/: Cargo.toml  command.rs  main.rs
behavioral/command/command/: copy.rs  cut.rs  paste.rs
behavioral/iterator/: Cargo.toml
behavioral/iterator/src/: main.rs  users.rs
behavioral/mediator/mediator-rc-refcell/: Cargo.toml
behavioral/mediator/mediator-top-down/: Cargo.toml
behavioral/memo/: Cargo.toml
behavioral/memo/src/: conceptual.rs  serde.rs
behavioral/observer/: Cargo.toml
behavioral/observer/src/: editor.rs  main.rs  observer.rs
behavioral/state/: Cargo.toml
behavioral/state/src/: main.rs  player.rs  state.rs
behavioral/strategy/: Cargo.toml
behavioral/strategy/src/: functional.rs
behavioral/template-method/: Cargo.toml
behavioral/template-method/src/: main.rs
behavioral/visitor/: Cargo.toml
behavioral/visitor/src/: main.rs  visitor.rs
creational/abstract-factory/app/: Cargo.toml
creational/abstract-factory/app-dyn/: Cargo.toml
creational/abstract-factory/app-dyn/src/: main.rs  render.rs
creational/abstract-factory/gui/: Cargo.toml
creational/abstract-factory/macos-gui/: Cargo.toml
creational/abstract-factory/windows-gui/: Cargo.toml
creational/builder/src/: components.rs  director.rs
creational/builder/src/builders/: car.rs  (+1 more)
creational/facotry-method/: Cargo.toml
creational/static-creation-method/: Cargo.toml
creational/static-creation-method/src/: main.rs
structural/adapter/: Cargo.toml
structural/adapter/src/: adaptee.rs  adapter.rs  main.rs
structural/bridge/: Cargo.toml
structural/bridge/src/: main.rs
structural/composite/: Cargo.toml
structural/composite/src/: main.rs
structural/decorator/: Cargo.toml
structural/decorator/src/: example.rs  main.rs
structural/facade/: Cargo.toml
structural/facade/src/: account.rs  main.rs  security_code.rs  wallet.rs  wallet_facade.rs
structural/flyweight/: Cargo.toml
structural/flyweight/src/: forest.rs  main.rs
structural/proxy/: Cargo.toml
structural/proxy/src/: main.rs  server.rs
(+31 files in other folders)
