[workspace]
name = "design-patten"
members = [
    "behavioral/command",
    "behavioral/chain-of-responsibility",
    "behavioral/iterator",
    "behavioral/mediator/mediator-rc-refcell",
    "behavioral/mediator/mediator-top-down",
    "behavioral/memo",
    "behavioral/observer",
    "behavioral/state",
    "behavioral/strategy",
    "behavioral/template-method",
    "behavioral/visitor",
    "structural/adapter",
    "structural/bridge",
    "structural/composite",
    "structural/decorator",
    "structural/facade",
    "structural/flyweight",
    "structural/proxy",
    "creational/abstract-factory/app",
    "creational/abstract-factory/app-dyn",
    "creational/builder",
    "creational/facotry-method",
    "creational/prototype",
    "creational/simple-factory",
    "creational/singleton",
    "creational/static-creation-method",
]