[package]
name = "memo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "memento"
path = "src/conceptual.rs"

[[bin]]
name = "memento-serde"
path = "src/serde.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"