[package]
name = "app-dyn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "app-dyn"
path = "src/main.rs"
[dependencies]
gui = { path = "../gui", version = "0.1.0" }
macos-gui = { path = "../macos-gui", version = "0.1.0" }
windows-gui = { path = "../windows-gui", version = "0.1.0" }
